fix: make sidebar section smaller

--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ ul {
 .main-container {
     height: 100%;
     display: grid;
-    grid-template-columns: 1fr 5fr;
+    grid-template-columns: 1fr 6fr;
 }
 
 .sidebar {
